--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Giphy Party!</title>
+  
+  <link rel="stylesheet"
+        href="giphy.css">
 </head>
 
 <body>
+<h1 id="heading">GIPHY PARTY</h1>
+<div class="container">
+  
+  <form class="giphy-form">
+    <input type="text" id="search" name="search"
+           placeholder="Enter a search term" class="input-text"/>
+    <input type="submit" class="giphy-button" value="Search Giphy!"/>
+    <button id="remove" class="giphy-button">Remove Images</button>
+  </form>
 
+  
+</div>
 <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
 <script src="app.js"></script>
