--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <input type="submit" class="giphy-button" value="Search Giphy!"/>
     <button id="remove" class="giphy-button">Remove Images</button>
   </form>
-
+  <div id="gif-area" class="row">
+  </div>
   
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
