--- a/index.html
+++ b/index.html
@@ -4,28 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <title>Giphy Party!</title>
-  
-  <link rel="stylesheet"
-        href="giphy.css">
+
+  <link rel="stylesheet" href="giphy.css">
 </head>
 
 <body>
-<h1 id="heading">GIPHY PARTY</h1>
-<div class="container">
-  
-  <form class="giphy-form">
-    <input type="text" id="search" name="search"
-           placeholder="Enter a search term" class="input-text"/>
-    <input type="submit" class="giphy-button" value="Search Giphy!"/>
-    <button id="remove" class="giphy-button">Remove Images</button>
-  </form>
-  <div id="gif-area" class="row">
+  <h1 id="heading">GIPHY PARTY</h1>
+  <div class="container">
+
+    <form class="giphy-form">
+      <input type="text" id="search" name="search" placeholder="Enter a search term" class="input-text" />
+      <input type="submit" class="giphy-button" value="Search Giphy!" />
+      <button id="remove" class="giphy-button">Remove Images</button>
+    </form>
+    <div id="gif-area" class="row">
+    </div>
+
   </div>
-  
-</div>
-<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.js"></script>
-<script src="app.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
